leaderboard portlet alignment issues

--- a/agile-frontend/WebContent/flatfull/css/misc/agile-portlet.css
+++ b/agile-frontend/WebContent/flatfull/css/misc/agile-portlet.css
@@ -714,17 +714,29 @@ border-radius: 2px;
   	width: 100%;
   	border-right: 1px solid #ddd;
 }
+.leader-board-1 li:last-child {
+  	border-right: none!important;
+}
 .leader-board-2 li {
   	width: 50%;
   	border-right: 1px solid #ddd;
+}
+.leader-board-2 li:last-child {
+  	border-right: none!important;
 }
 .leader-board-3 li {
   	width: 33.33%;
   	border-right: 1px solid #ddd;
 }
+.leader-board-3 li:last-child {
+  	border-right: none!important;
+}
 .leader-board-4 li {
   	width: 25%;
   	border-right: 1px solid #ddd;
+}
+.leader-board-4 li:last-child {
+  	border-right: none!important;
 }
 .leader-board-view li div.p-sm:nth-of-type(1) img {
 	border: 2px solid #f2b50f;
